added public products route
