# api/routes/store.js
@@ -1,9 +1,8 @@
 import express from "express"
+import productController from "../controller/productController.js"
 
 export const storeRouter = express.Router()
 
-storeRouter.get("/product", async (req, res) => {
-    res.status(200).json({
-        message: "OK"
-    })
-})
+// product
+storeRouter.get("/product", productController.getAllProducts)
+storeRouter.get("/product/:id", productController.getProduct)
