# api/swagger.json
@@ -829,6 +829,102 @@
           }
         }
       }
+    },
+    "/v1/store/product": {
+      "get": {
+        "tags": [
+          "/store/product"
+        ],
+        "summary": "Get all Products for Store view",
+        "security": [
+          {
+            "Authorization": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Página de Pesquisa",
+            "example": 1
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Número de itens para se retornar por página",
+            "example": 10
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetAllProductsResponseSimplified"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/store/product/{id}": {
+      "get": {
+        "tags": [
+          "/store/product/{id}"
+        ],
+        "summary": "Get Some Product for Store view",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "Numeric ID of the product to get"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetProductResponseSimplified"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "InternalError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1030,8 +1126,17 @@
           "$ref": "#/components/schemas/product"
         }
       },
+      "GetAllProductsResponseSimplified": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/product_simplified"
+        }
+      },
       "GetProductResponse": {
         "$ref": "#/components/schemas/product"
+      },
+      "GetProductResponseSimplified": {
+        "$ref": "#/components/schemas/product_simplified"
       },
       "SaveProductRequest": {
         "type": "object",
@@ -1185,6 +1290,31 @@
           "updatedAt": {
             "type": "string",
             "default": "2023-08-30T04:56:15.000Z"
+          }
+        }
+      },
+      "product_simplified": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "default": "Vinho Chave"
+          },
+          "description": {
+            "type": "string",
+            "default": "Vinho Fabricado em 1888 na vinícula de São Paulo"
+          },
+          "price": {
+            "type": "string",
+            "default": "19.99"
+          },
+          "ratings": {
+            "type": "number",
+            "default": 1.75
+          },
+          "totalRatings": {
+            "type": "number",
+            "default": 10
           }
         }
       }
